[package]
name = "go-test1"
version = "0.1.0"
authors = ["Miles Steele <miles@milessteele.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.6"
clap = "2.33.0"
ignore = "0.4.11"
grep-searcher = "0.1.6"
grep-regex = "0.1.5"